--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --open",
+    "lan": "webpack-dev-server --host 0.0.0.0",
     "build": "webpack",
     "watch": "webpack --watch"
   },
