--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,11 +66,11 @@
         "max-len": "off",
         "max-lines": "warn",
         "max-nested-callbacks": "error",
-        "max-params": "warn",
+        "max-params": ["warn", 5],
         "max-statements": "off",
         "max-statements-per-line": "error",
         "multiline-comment-style": ["error", "separate-lines"],
-        "multiline-ternary": "warn",
+        "multiline-ternary": "off",
         "new-cap": "error",
         "new-parens": "error",
         "newline-after-var": "off",
