--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -194,7 +194,7 @@
         "require-await": "error",
         "require-jsdoc": "off",
         "rest-spread-spacing": "error",
-        "semi": "off",
+        "semi": "error",
         "semi-spacing": "error",
         "semi-style": ["error", "last"],
         "sort-keys": "off",
